Cleanup Overlap, calculation service and SickNoteValidator